<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/accueil"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_donperso"
            android:icon="@drawable/acb"
            android:title="@string/dp" />

        <item
            android:id="@+id/nav_reo"
            android:icon="@drawable/reo"
            android:title="@string/reo" />

        <item
            android:id="@+id/nav_ue"
            android:icon="@drawable/ue"
            android:title="@string/ue" />

        <item
            android:id="@+id/nav_fiche"
            android:icon="@drawable/fiche"
            android:title="@string/fiche" />

        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/note"
            android:title="@string/note"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />


    </group>




</menu>
