<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/presentation"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.presentation.PresentationFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@drawable/dg"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />


     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/dg_msg"
         android:textSize="20dp"
         android:textStyle="bold|normal"
         android:layout_gravity="center"
         android:gravity="center"
         android:layout_marginTop="15dp"
         android:textColor="@color/Esig_Blue"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/Esig_descript" />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/offre_form"
        android:textSize="20dp"
        android:textStyle="bold|normal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="@color/Esig_Blue"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/Form_desc" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vie_est"
        android:textSize="20dp"
        android:textStyle="bold|normal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="@color/Esig_Blue"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/vie_desc" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">
    </androidx.cardview.widget.CardView>

</LinearLayout>

</ScrollView>