<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/Esig_Blue"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Licence">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="LICENCE "
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textSize="25dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Nos 5 licences basées sur le programme Français"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="- COMMUNICATION JOURNALISME  'INFO-COM'"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:textSize="17dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="- GESTION DES ENTREPRISES et ADMIN  'GEA"
        android:textColor="@android:color/white"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:textSize="17dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="- TECHNIQUE COMMERCIALE   'TC'"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:textSize="17dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="- GENIE ELECTRIQUE INFORMATIQUE INDUSTRIELLE  'GEII'"
        android:textColor="@android:color/white"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:textSize="17dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="- INFORMATIQUE"
        android:textColor="@android:color/white"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:textSize="17dp" />




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Profil d'Entrée"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pe"
        android:textColor="@android:color/white"
        android:textSize="17dp"
        android:layout_marginTop="10dp"
        android:gravity="center"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Profil de Sortie"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ps"
        android:textColor="@android:color/white"
        android:textSize="17dp"
        android:layout_marginTop="10dp"
        android:gravity="center"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Compétences visées "
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ps"
        android:textColor="@android:color/white"
        android:textSize="17dp"
        android:layout_marginTop="10dp"
        android:gravity="center"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Condition de validation du diplôme "
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Validation des 6 semestres de 30 crédits ETCS chacun.s"
        android:textColor="@android:color/white"
        android:textSize="17dp"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=" Stages "
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stage"
        android:textColor="@android:color/white"
        android:textSize="17dp"
        android:layout_marginTop="10dp"
        android:gravity="center"/>









</LinearLayout>

</ScrollView>